Fixed header alignment

--- a/src/project_page.css
+++ b/src/project_page.css
@@ -10,6 +10,9 @@
   text-align: center;
   margin-bottom: 0rem;
 }
+h1 {
+  text-align: center;
+}
 
 h2 {
   font-size: 0.9rem;
